--- a/index.html
+++ b/index.html
@@ -60,43 +60,38 @@
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
-      <button id="toggle-btn">Disconnect</button>
     </form>
-
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      const socket = io();
+      let counter = 0;
+
+      const socket = io({
+        ackTimeout: 10000,
+        retries: 3,
+        auth: {
+          serverOffset: 0,
+        },
+      });
 
       const form = document.getElementById("form");
       const input = document.getElementById("input");
       const messages = document.getElementById("messages");
 
-      /// stimulate server disconnections
-      const toggleButton = document.getElementById("toggle-btn");
-      toggleButton.addEventListener("click", (e) => {
-        e.preventDefault();
-        if (socket.connected) {
-          toggleButton.innerText = "Connect";
-          socket.disconnect();
-        } else {
-          toggleButton.innerText = "Disconnect";
-          socket.connect();
-        }
-      });
-      ///
-
       form.addEventListener("submit", (e) => {
         e.preventDefault();
         if (input.value) {
-          socket.emit("chat message", input.value);
+          const clientOffset = `${socket.id}-${counter++}`;
+          socket.emit("chat message", input.value, clientOffset);
           input.value = "";
         }
       });
-      socket.on("chat message", (msg) => {
+
+      socket.on("chat message", (msg, serverOffset) => {
         const item = document.createElement("li");
         item.textContent = msg;
         messages.appendChild(item);
         window.scrollTo(0, document.body.scrollHeight);
+        socket.auth.serverOffset = serverOffset;
       });
     </script>
   </body>
